Added new roles and relevant permissions